// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
[
  .c0 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c0:checked + label {
  background: green;
}

.c0:checked + label:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<input
    className="c0"
    id="switch"
    onChange={[Function]}
    type="checkbox"
  />,
  .c0 {
  cursor: pointer;
  width: 100px;
  height: 50px;
  background: lightgray;
  display: block;
  border-radius: 20px;
  position: relative;
}

.c0:after {
  content: '';
  position: absolute;
  top: 5px;
  left: 5px;
  width: 40%;
  height: calc(100% - 10px);
  background: white;
  border-radius: 20px;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0:active:after {
  width: 60%;
}

<label
    className="c0"
    height="50px"
    htmlFor="switch"
    width="100px"
  />,
]
`;

exports[`Test with props 1`] = `
[
  .c0 {
  height: 0;
  width: 0;
  visibility: hidden;
}

.c0:checked + label {
  background: #000;
}

.c0:checked + label:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

<input
    className="c0"
    id="switch"
    onChange={[Function]}
    type="checkbox"
  />,
  .c0 {
  cursor: pointer;
  width: 2.5em;
  height: 2.5em;
  background: #27847A;
  display: block;
  border-radius: 1.25em;
  position: relative;
}

.c0:after {
  content: '';
  position: absolute;
  top: 5px;
  left: 5px;
  width: 40%;
  height: calc(100% - 10px);
  background: white;
  border-radius: 1.25em;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}

.c0:active:after {
  width: 60%;
}

<label
    className="c0"
    height="2.5em"
    htmlFor="switch"
    width="2.5em"
  />,
]
`;
